# MLOps

./: README.md  data.py  models.py  predictions.csv  train.py
.dvc/: config
MLOps/: .pre-commit-config.yaml  README.md  commands.py  pyproject.toml
MLOps/configs/: config.yaml
MLOps/data/: MNIST.dvc
MLOps/docker/: docker-compose.yaml  report.md
MLOps/docker/model_repository/model/: config.pbtxt
MLOps/docker/model_repository/model/1/: model.onnx.dvc
MLOps/mlops/: data.py  infer.py  models.py  train.py  triton_client.py
